# emscripten_webidl

./: CMakeLists.txt  README.md  conanfile.txt  front-matter.js  myLib.h  myLib.idl  onload.js
html/: some.html
src/: CMakeLists.txt  wasmTest.cxx  wasmTest.hxx
test/: CMakeLists.txt  test.cxx
webidl/: myLib.idl
